# XPCS-Toolkit

./: .gitignore  .pip-audit.toml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  COVERAGE_SUMMARY.txt  FACADE_IMPLEMENTATION_SUMMARY.md  GEMINI.md  HISTORY.rst  IMPROVEMENT_PLAN.md  MANIFEST.in  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  PRIORITY_TEST_SPECIFICATIONS.md  README.rst  TASK_4_COMPLETION_REPORT.md  TASK_5_COMPLETION_REPORT.md  TEST_ANALYSIS_README.md  TEST_COVERAGE_ANALYSIS.md  benchmark_comprehensive.py  production_config.yaml  pyproject.toml  pytest.ini  requirements.txt  temp_fixture_update.py  test_complete_g2_fix.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ci.yml.disabled  docs.yml  performance-regression.yml  pre-commit.yml  release.yml  release.yml.disabled  workflow-validation.yml  workflow-validation.yml.disabled
docs/: DOCUMENTATION_INDEX.md  LOGGING_SYSTEM.md  OPTIMIZATION_GUIDE.md  PRODUCTION_READINESS_FINAL_REPORT.md  QT_COMPLIANCE_API_REFERENCE.md  QT_COMPLIANCE_ARCHITECTURE.md  QT_COMPLIANCE_DEVELOPER_GUIDE.md  QT_COMPLIANCE_QUICK_REFERENCE.md  README.md  ROBUST_FITTING_GUI_GUIDE.md  ROBUST_FITTING_INTEGRATION.md  TESTING.md  TESTING_DEVELOPER_GUIDE.md  TESTING_ORIGINAL.md  TESTING_STRATEGY.md  authors.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  make.bat  modernization-summary.md  production_deployment_guide.md  requirements.txt  technical-debt-inventory.md  usage.rst  xpcs_toolkit.rst
docs/api/: cli.rst  fileio.rst  fitting.rst  gui.rst  index.rst  modules.rst  plotting.rst  simplemask.rst  threading.rst  utils.rst  xpcs_toolkit.rst
docs/architecture/: FACADE_INFRASTRUCTURE.md  dependency_analysis.md  dependency_diagram.md  integration_catalog.md
docs/developer/: index.rst  optimization.rst
docs/plans/: jax-migration-plan.md
docs/user_guide/: examples.rst  index.rst  installation.rst  quickstart.rst  simplemask.rst
examples/: facade_usage_example.py
scripts/: capture_gallery.py  offscreen_snap.py  update_ui.sh  validate_logging.py  validate_robust_optimizer.py
src/xpcs_toolkit/: __init__.py  cli.py  file_locator.py  viewer_kernel.py  viewer_ui.py  xpcs_file.py  xpcs_viewer.py
tests/: ENHANCEMENT_SUMMARY.md  FRAMEWORK_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_QT_ERROR_FRAMEWORK.md  conftest.py  conftest_original.py  coverage_manager.py  hypothesis_framework.py  scientific_validation.py  test_advanced_caching.py  test_coverage_reporting.py  test_cross_platform_consistency.py  test_example_usage.py  test_hypothesis_framework.py  test_io_performance.py  test_numerical_precision.py  test_suite_validation.py  test_vectorization_accuracy.py  test_xpcs_toolkit.py
tests/analysis/: __init__.py
tests/cross_platform/: test_qt_cross_platform_validation.py
tests/documentation/: test_qt_compliance_documentation.py
tests/end_to_end/: test_jax_migration_workflows.py  test_xpcs_workflow.py
tests/error_handling/: README.md  conftest.py  test_data_validation_errors.py  test_edge_cases.py  test_error_injection_framework.py  test_error_recovery.py  test_file_io_errors.py  test_framework_validation.py  test_gui_errors.py  test_memory_errors.py  test_resource_exhaustion.py
tests/fixtures/: __init__.py  core_fixtures.py  hdf5_fixtures.py  qt_fixtures.py  scientific_fixtures.py  synthetic_data.py  xpcs_synthetic.py
tests/framework/: README.md  integration_validator.py  maintenance_framework.py  performance_monitor.py  qt_error_regression.py  qt_regression_testing_framework.py  qt_test_runner.py  quality_standards.py  utils.py
tests/gui_interactive/: .coveragerc  README.md  conftest.py  pytest.ini  run_gui_tests.py  test_analysis_tabs.py  test_error_handling.py  test_file_operations.py  test_main_window.py  test_offscreen_snapshot.py  test_performance.py  test_plot_interactions.py  test_user_scenarios.py
tests/integration/: system_stability_tests.py  test_backward_compatibility.py  test_component_integration.py  test_data_pipeline_integration.py  test_error_integration.py  test_hdf5_facade.py  test_logging_integration.py  test_memory_integration.py  test_performance_integration.py  test_phase_integration.py  test_qt_compliance_integration.py  test_resource_integration.py  test_robust_fitting_integration.py  test_threading_integration.py
tests/jax_migration/: __init__.py  conftest.py
tests/logging/: README.md  __init__.py  conftest.py
tests/performance/: README.md  __init__.py  conftest.py  test_robust_fitting_performance.py
tests/qt_validation/: __init__.py  test_qt_compliance_documentation.py  test_qt_cross_platform_validation.py  test_qt_framework_validation.py
tests/reliability/: reliability_fallbacks.py  test_reliability_framework.py
tests/scientific/: README.md
tests/unit/: test_lazy_loading.py  test_package_basics.py  test_plot_constants.py  test_qmap_constants.py  test_robust_fitting_integration.py
tests/user_acceptance/: test_qt_user_acceptance_validation.py
tests/utils/: __init__.py  ci_integration.py  data_management.py  h5py_mocks.py  isolation.py  memory_testing_utils.py  qt_threading_utils.py  test_data_management.py  test_isolation.py  test_performance.py  test_reliability.py
tests/validation/: test_integration_validation.py  test_scientific_validation.py
validation/: README.md  comprehensive_validation_runner.py  scientific_accuracy_validator.py
xpcs_toolkit/: __init__.py  cli.py  cli_main.py  file_locator.py  icons_rc.py  viewer_kernel.py  viewer_ui.py  xpcs_file.py  xpcs_viewer.py
xpcs_toolkit/cli/: twotime_batch.py
xpcs_toolkit/deployment/: ci_cd_integration.py  maintenance_automation.py  qt_deployment_manager.py
xpcs_toolkit/fileIO/: hdf_reader.py  hdf_reader_enhanced.py  qmap_utils.py
xpcs_toolkit/gui/: initialization_validator.py
xpcsviewer/: __init__.py  cli_main.py  file_locator.py  viewer_kernel.py  viewer_ui.py  xpcs_file.py  xpcs_viewer.py
(+378 files in other folders)
