[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xpcs-toolkit"
dynamic = ["version"]
description = "XPCS Toolkit: A python-based interactive tool to visualize and model XPCS dataset"
readme = "README.rst"
requires-python = ">=3.12"
authors = [{name = "Miaoqi Chu", email = "mqichu@anl.gov"}]
maintainers = [{name = "Miaoqi Chu", email = "mqichu@anl.gov"}]

classifiers = [
    "Development Status :: 4 - Beta",  
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

license = {text = "MIT"}
keywords = ["XPCS", "X-ray", "photon correlation spectroscopy", "synchrotron", "visualization", "science"]

dependencies = [
    "pyside6",
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "pyqtgraph",
    "pandas",
    "scikit-learn",
    "joblib",
    "tqdm",
    "psutil",
    "hdf5plugin"
]

[project.scripts]
xpcs-toolkit = "xpcs_toolkit.cli:main"
pyxpcsviewer = "xpcs_toolkit.cli:main"
run_viewer = "xpcs_toolkit.cli:main"

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
bugs = "https://github.com/AZjk/xpcs-toolkit/issues"
changelog = "https://github.com/AZjk/xpcs-toolkit/blob/master/changelog.md"
homepage = "https://github.com/AZjk/xpcs-toolkit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-timestamp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"xpcs_toolkit" = ["configure/*.json", "ui/*.ui"]
"xpcs_toolkit.ui.resources" = ["*.qrc", "*.png"]

# Mypy
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
